objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCompanyLogoFileName__c</fullName>
        <formula>InsuranceCompany__r.InsuranceCompanyLogoFileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InsuranceCompanyLogoFileName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCompanyName__c</fullName>
        <formula>InsuranceCompany__r.Insurance_Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InsuranceCompanyName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InsuranceCompany</label>
        <referenceTo>InsuranceCompany__c</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfAddresses__c</fullName>
        <label>NumberOfAddresses</label>
        <summaryForeignKey>PatientAddress__c.Patient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientAge__c</fullName>
        <formula>IF( NOT( ISBLANK(  BirthDate__c  ) ) , IF( DATE( 2000 , MONTH( BirthDate__c ) , DAY( BirthDate__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), YEAR (Today()) - YEAR ( BirthDate__c ), YEAR (Today()) - YEAR ( BirthDate__c ) -1 ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PatientAge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Full_Info</fullName>
        <columns>NAME</columns>
        <columns>UserName__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>NumberOfAddresses__c</columns>
        <columns>InsuranceCompany__c</columns>
        <columns>InsuranceCompanyLogoFileName__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full Info</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Patient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>